--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,53 @@
 services:
   db:
     image: postgres:15
+    env_file: .env 
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=qa_service
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
       
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:${DB_PORT}"
     volumes:
       - db:/var/lib/postgresql/data
-  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      interval: 3s
+      timeout: 3s
+      retries: 10
+
   migrations:
     build:
       context: .
       dockerfile: Dockerfile.goose
+    env_file: .env 
     container_name: qa_service_goose
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      GOOSE_DBSTRING: "host=db user=postgres password=password dbname=qa_service port=5432 sslmode=disable"
-  
-  app:
+      GOOSE_DRIVER: ${GOOSE_DRIVER}
+      GOOSE_DBSTRING: "${GOOSE_DBSTRING}"
+
+
+  app: 
     build:
       context: .
+    env_file: .env
     ports:
       - "8080:8080"
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: password
-      DB_NAME: qa_service
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      migrations:
+        condition: service_completed_successfully
 
 volumes:
   db:
